--- a/samples/magazine/slider.html
+++ b/samples/magazine/slider.html
@@ -15,7 +15,7 @@
 
 <div class="zoom-icon zoom-icon-in"></div>
 
-<div class="magazine-viewport">
+<div class="magazine-viewport" style="width: 300px!important; height: 600px!important;">
 	<div class="container">
 		<div class="magazine">
 			<!-- Next button -->
