--- a/samples/magazine/slider.html
+++ b/samples/magazine/slider.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Pion Lounge | Menu </title>
-<meta name="viewport" content="width = 1050, user-scalable = no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 <link rel="icon" type="image/png" href="pics/favicon.png" />
 <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
 <script type="text/javascript" src="../../extras/jquery-ui-1.8.20.custom.min.js"></script>
@@ -15,7 +15,7 @@
 
 <div class="zoom-icon zoom-icon-in"></div>
 
-<div class="magazine-viewport" style="width: 300px!important; height: 600px!important;">
+<div class="magazine-viewport">
 	<div class="container">
 		<div class="magazine">
 			<!-- Next button -->
